--- a/spatial-transcriptomics.html
+++ b/spatial-transcriptomics.html
@@ -417,7 +417,7 @@ featured in <em>Seurat</em>’s tutorials, so users are encouraged to see
 how these packages can be used together.</p>
 </div>
 <div id="before-you-start" class="section level1">
-<h1>Before You Start</h1>
+<h1>Before you start</h1>
 <p>This vignette assumes prior experience with <a
 href="https://satijalab.org/seurat/" target="_blank"
 rel="noopener"><em>Seurat</em></a> <span class="citation">(Hao et al.
@@ -428,6 +428,11 @@ workflows, we recommend reviewing the <a
 href="https://satijalab.org/seurat/articles/get_started_v5_new#spatial-analysis"
 target="_blank" rel="noopener">spatial analysis tutorials</a> before
 continuing.</p>
+<p><strong>Computational requirement:</strong></p>
+<ul>
+<li><p>Hardware: RAM &gt;= 16 GB</p></li>
+<li><p>Software: R (&gt;=4.4) and RStudio</p></li>
+</ul>
 </div>
 <div id="required-packages" class="section level1">
 <h1>Required packages</h1>
@@ -702,20 +707,19 @@ with <em>Seurat</em> and then extracting the relevant data for
 this dataset, refer to <em>Seurat</em>’s <a
 href="https://satijalab.org/seurat/articles/visiumhd_analysis_vignette.html"
 target="_blank" rel="noopener">visiumhd_analysis_vignette</a>.</p>
-<p>The Visium HD dataset can be downloaded from the 10x Genomics
-repository at:</p>
+<p><strong>The Visium HD dataset can be downloaded from the <a
+href="https://www.10xgenomics.com/datasets">10x Genomics</a>
+repository:</strong></p>
 <ul>
-<li>Dataset: Visium HD Spatial Gene Expression Library, Mouse Brain
-(FFPE)</li>
-<li>Repository: <a
+<li>Dataset: <a
 href="https://www.10xgenomics.com/datasets/visium-hd-cytassist-gene-expression-libraries-of-mouse-brain-he"
-target="_blank" rel="noopener">https://www.10xgenomics.com/datasets
-…</a></li>
-<li>Location: Output and supplemental files</li>
+target="_blank" rel="noopener">Visium HD Spatial Gene Expression
+Library, Mouse Brain (FFPE)</a></li>
+<li>Where to find it: Output and supplemental files</li>
 <li>Download: <a
 href="https://cf.10xgenomics.com/samples/spatial-exp/3.0.0/Visium_HD_Mouse_Brain/Visium_HD_Mouse_Brain_binned_outputs.tar.gz">Binned
 outputs (all bin levels)</a></li>
-<li>File name: Visium_HD_Mouse_Brain_binned_outputs.tar.gz</li>
+<li>File: Visium_HD_Mouse_Brain_binned_outputs.tar.gz</li>
 <li>MD5: 2e728d1c1bda99a36535ba45b4319a98</li>
 <li>Size: 4.62 GB</li>
 </ul>
