--- a/spatial-transcriptomics.html
+++ b/spatial-transcriptomics.html
@@ -406,7 +406,7 @@ coordinates</h3>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
 <p>This vignette introduces the <em>SpotSpace</em> package, a
-<em>PathwaySpace</em> extension for <em>Seurat</em> package <span
+<em>PathwaySpace</em> extension for the <em>Seurat</em> package <span
 class="citation">(Hao et al. 2024)</span>, providing methods for signal
 propagation and visualization in spatial transcriptomics.
 <em>SpotSpace</em> extends existing spatial analysis workflows to
@@ -833,15 +833,14 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] Seurat_5.3.1.9999              SeuratObject_5.2.0            
-##  [3] sp_2.2-0                       stxBrain.SeuratData_0.1.2     
-##  [5] ssHippo.SeuratData_3.1.4       kidneyref.SeuratData_1.0.2    
-##  [7] bonemarrowref.SeuratData_1.0.0 SeuratData_0.2.2.9002         
-##  [9] fontawesome_0.5.3              patchwork_1.3.2               
-## [11] igraph_2.2.0                   SpotSpace_0.0.2               
-## [13] PathwaySpace_1.0.3.1           RGraphSpace_1.1.0             
-## [15] ggplot2_4.0.0.9000             remotes_2.5.0                 
-## [17] bs4cards_0.1.1                
+##  [1] patchwork_1.3.2                Seurat_5.3.1.9999             
+##  [3] SeuratObject_5.2.0             sp_2.2-0                      
+##  [5] stxBrain.SeuratData_0.1.2      ssHippo.SeuratData_3.1.4      
+##  [7] kidneyref.SeuratData_1.0.2     bonemarrowref.SeuratData_1.0.0
+##  [9] SeuratData_0.2.2.9002          SpotSpace_0.0.2               
+## [11] PathwaySpace_1.0.3.1           RGraphSpace_1.1.0             
+## [13] ggplot2_4.0.0.9000             remotes_2.5.0                 
+## [15] fontawesome_0.5.3             
 ## 
 ## loaded via a namespace (and not attached):
 ##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
@@ -860,20 +859,20 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ##  [40] jquerylib_0.1.4        scattermore_1.2        Rcpp_1.1.0            
 ##  [43] knitr_1.50             tensor_1.5.1           future.apply_1.20.0   
 ##  [46] zoo_1.8-14             sctransform_0.4.2      httpuv_1.6.16         
-##  [49] Matrix_1.7-4           splines_4.5.1          tidyselect_1.2.1      
-##  [52] abind_1.4-8            rstudioapi_0.17.1      yaml_2.3.10           
-##  [55] spatstat.random_3.4-2  spatstat.explore_3.5-3 codetools_0.2-20      
-##  [58] miniUI_0.1.2           listenv_0.9.1          lattice_0.22-5        
-##  [61] tibble_3.3.0           plyr_1.8.9             shiny_1.11.1          
-##  [64] withr_3.0.2            S7_0.2.0               ROCR_1.0-11           
-##  [67] evaluate_1.0.5         Rtsne_0.17             future_1.67.0         
-##  [70] fastDummies_1.7.5      survival_3.8-3         polyclip_1.10-7       
-##  [73] fitdistrplus_1.2-4     pillar_1.11.1          KernSmooth_2.23-26    
-##  [76] plotly_4.11.0          generics_0.1.4         RcppHNSW_0.6.0        
-##  [79] scales_1.4.0           globals_0.18.0         xtable_1.8-4          
-##  [82] glue_1.8.0             lazyeval_0.2.2         tools_4.5.1           
-##  [85] data.table_1.17.8      RSpectra_0.16-2        RANN_2.6.2            
-##  [88] fs_1.6.6               dotCall64_1.2          cowplot_1.2.0         
+##  [49] Matrix_1.7-4           splines_4.5.1          igraph_2.2.0          
+##  [52] tidyselect_1.2.1       abind_1.4-8            rstudioapi_0.17.1     
+##  [55] yaml_2.3.10            spatstat.random_3.4-2  spatstat.explore_3.5-3
+##  [58] codetools_0.2-20       miniUI_0.1.2           listenv_0.9.1         
+##  [61] lattice_0.22-5         tibble_3.3.0           plyr_1.8.9            
+##  [64] shiny_1.11.1           withr_3.0.2            S7_0.2.0              
+##  [67] ROCR_1.0-11            evaluate_1.0.5         Rtsne_0.17            
+##  [70] future_1.67.0          fastDummies_1.7.5      survival_3.8-3        
+##  [73] polyclip_1.10-7        fitdistrplus_1.2-4     pillar_1.11.1         
+##  [76] KernSmooth_2.23-26     plotly_4.11.0          generics_0.1.4        
+##  [79] RcppHNSW_0.6.0         scales_1.4.0           globals_0.18.0        
+##  [82] xtable_1.8-4           glue_1.8.0             lazyeval_0.2.2        
+##  [85] tools_4.5.1            data.table_1.17.8      RSpectra_0.16-2       
+##  [88] RANN_2.6.2             dotCall64_1.2          cowplot_1.2.0         
 ##  [91] grid_4.5.1             tidyr_1.3.1            nlme_3.1-168          
 ##  [94] cli_3.6.5              rappdirs_0.3.3         spatstat.sparse_3.1-0 
 ##  [97] spam_2.11-1            viridisLite_0.4.2      dplyr_1.1.4           
