--- a/spatial-transcriptomics.html
+++ b/spatial-transcriptomics.html
@@ -707,10 +707,11 @@ with <em>Seurat</em> and then extracting the relevant data for
 this dataset, refer to <em>Seurat</em>’s <a
 href="https://satijalab.org/seurat/articles/visiumhd_analysis_vignette.html"
 target="_blank" rel="noopener">visiumhd_analysis_vignette</a>.</p>
-<p><strong>The Visium HD dataset can be downloaded from the <a
-href="https://www.10xgenomics.com/datasets">10x Genomics</a>
+<p><strong>The Visium HD dataset can be downloaded from the 10x Genomics
 repository:</strong></p>
 <ul>
+<li>Repository URL: <a href="https://www.10xgenomics.com/datasets"
+class="uri">https://www.10xgenomics.com/datasets</a></li>
 <li>Dataset: <a
 href="https://www.10xgenomics.com/datasets/visium-hd-cytassist-gene-expression-libraries-of-mouse-brain-he"
 target="_blank" rel="noopener">Visium HD Spatial Gene Expression
