--- a/spatial-transcriptomics.html
+++ b/spatial-transcriptomics.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Sysbiolab Team" />
 
-<meta name="date" content="2025-10-25" />
+<meta name="date" content="2026-02-27" />
 
 <title>Visualizing spatial transcriptomics</title>
 
@@ -397,12 +397,12 @@ div.tocify {
 <h3 class="subtitle">Gene expression projections on spot
 coordinates</h3>
 <h4 class="author">Sysbiolab Team</h4>
-<h4 class="date">2025-10-25</h4>
+<h4 class="date">2026-02-27</h4>
 
 </div>
 
 
-<p><strong>Package</strong>: PathwaySpace 1.0.3.1 <br/></p>
+<p><strong>Package</strong>: PathwaySpace 1.1.1 <br/></p>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
 <p>This vignette introduces the <em>SpotSpace</em> package, a
@@ -453,19 +453,19 @@ if (!require(&quot;SeuratData&quot;, quietly = TRUE)){
   remotes::install_github(&quot;satijalab/seurat-data&quot;)
 }</code></pre>
 <pre class="r"><code># Check versions
-if (packageVersion(&quot;RGraphSpace&quot;) &lt; &quot;1.1.0&quot;){
+if (packageVersion(&quot;RGraphSpace&quot;) &lt; &quot;1.1.1&quot;){
   message(&quot;Need to update &#39;RGraphSpace&#39; for this vignette&quot;)
   remotes::install_github(&quot;sysbiolab/RGraphSpace&quot;)
 }
-if (packageVersion(&quot;PathwaySpace&quot;) &lt; &quot;1.0.3.1&quot;){
+if (packageVersion(&quot;PathwaySpace&quot;) &lt; &quot;1.1.1&quot;){
   message(&quot;Need to update &#39;PathwaySpace&#39; for this vignette&quot;)
   remotes::install_github(&quot;sysbiolab/PathwaySpace&quot;)
 }
-if (packageVersion(&quot;SpotSpace&quot;) &lt; &quot;0.0.2&quot;){
+if (packageVersion(&quot;SpotSpace&quot;) &lt; &quot;0.0.5&quot;){
   message(&quot;Need to update &#39;SpotSpace&#39; for this vignette&quot;)
   remotes::install_github(&quot;sysbiolab/SpotSpace&quot;)
 }
-if (packageVersion(&quot;Seurat&quot;) &lt; &quot;5.3.1.9999&quot;){
+if (packageVersion(&quot;Seurat&quot;) &lt; &quot;5.4.0.9009&quot;){
   message(&quot;Need to update &#39;Seurat&#39; for this vignette&quot;)
   remotes::install_github(&quot;satijalab/Seurat&quot;)
 }</code></pre>
@@ -526,7 +526,8 @@ rm(seurat_obj)</code></pre>
 coordinates and plot the resulting graph overlaid on the tissue
 image.</p>
 <pre class="r"><code># Create a PathwaySpace object from &#39;spot_coord&#39;, mapped to the &#39;raster_image&#39;
-pspace_obj &lt;- buildSpotSpace(spot_coord = spot_coord, raster_image = raster_image)</code></pre>
+pspace_obj &lt;- buildSpotSpace(spot_coord = spot_coord, 
+  raster_image = raster_image, rotate.xy = FALSE)</code></pre>
 <pre class="r"><code># Check spots on the top of the &#39;raster_image&#39;
 xy_labs &lt;- labs(x=&quot;Spot coordinates 1&quot;, y=&quot;Spot coordinates 2&quot;)
 plotGraphSpace(pspace_obj, add.image = TRUE) + xy_labs</code></pre>
@@ -644,7 +645,7 @@ vst_gexp &lt;- GetAssayData(seurat_obj, layer=&quot;data&quot;)
 # If needed, remove seurat_obj to free memory
 rm(seurat_obj)</code></pre>
 <pre class="r"><code># Create a PathwaySpace object from &#39;spot_coord&#39;
-pspace_obj &lt;- buildSpotSpace(spot_coord = spot_coord, nrc=700)</code></pre>
+pspace_obj &lt;- buildSpotSpace(spot_coord = spot_coord, nrc=700, rotate.xy = FALSE)</code></pre>
 </div>
 <div id="running-pathwayspace-1" class="section level2">
 <h2>Running <em>PathwaySpace</em></h2>
@@ -747,7 +748,7 @@ norm_gexp &lt;- GetAssayData(seurat_obj, layer=&quot;data&quot;)
 rm(seurat_obj)</code></pre>
 <pre class="r"><code># Create a PathwaySpace object from &#39;spot_coord&#39;, mapped to the &#39;raster_image&#39;
 pspace_obj &lt;- buildSpotSpace(spot_coord = spot_coord, 
-  raster_image = raster_image, nrc = 700)</code></pre>
+  raster_image = raster_image, nrc = 700, rotate.xy = FALSE)</code></pre>
 </div>
 <div id="running-pathwayspace-2" class="section level2">
 <h2>Running <em>PathwaySpace</em></h2>
@@ -811,9 +812,9 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 </div>
 <div id="session-information" class="section level1">
 <h1>Session information</h1>
-<pre><code>## R version 4.5.1 (2025-06-13)
+<pre><code>## R version 4.5.2 (2025-10-31)
 ## Platform: x86_64-pc-linux-gnu
-## Running under: Ubuntu 24.04.3 LTS
+## Running under: Ubuntu 24.04.4 LTS
 ## 
 ## Matrix products: default
 ## BLAS:   /usr/lib/x86_64-linux-gnu/openblas-pthread/libblas.so.3 
@@ -834,54 +835,58 @@ class="uri">https://doi.org/10.1016/j.ccell.2024.12.002</a></p></li>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] patchwork_1.3.2                Seurat_5.3.1.9999             
-##  [3] SeuratObject_5.2.0             sp_2.2-0                      
-##  [5] stxBrain.SeuratData_0.1.2      ssHippo.SeuratData_3.1.4      
-##  [7] kidneyref.SeuratData_1.0.2     bonemarrowref.SeuratData_1.0.0
-##  [9] SeuratData_0.2.2.9002          SpotSpace_0.0.2               
-## [11] PathwaySpace_1.0.3.1           RGraphSpace_1.1.0             
-## [13] ggplot2_4.0.0.9000             remotes_2.5.0                 
-## [15] fontawesome_0.5.3             
+##  [1] Seurat_5.4.0.9009              SeuratObject_5.3.0            
+##  [3] sp_2.2-0                       stxBrain.SeuratData_0.1.2     
+##  [5] ssHippo.SeuratData_3.1.4       kidneyref.SeuratData_1.0.2    
+##  [7] bonemarrowref.SeuratData_1.0.0 SeuratData_0.2.2.9002         
+##  [9] fontawesome_0.5.3              patchwork_1.3.2               
+## [11] igraph_2.2.0                   SpotSpace_0.0.5               
+## [13] PathwaySpace_1.1.1             RGraphSpace_1.1.1             
+## [15] ggplot2_4.0.0.9000             remotes_2.5.0                 
+## [17] bs4cards_0.1.1                
 ## 
 ## loaded via a namespace (and not attached):
-##   [1] deldir_2.0-4           pbapply_1.7-4          gridExtra_2.3         
-##   [4] rlang_1.1.6            magrittr_2.0.4         RcppAnnoy_0.0.22      
-##   [7] spatstat.geom_3.6-0    matrixStats_1.5.0      ggridges_0.5.7        
-##  [10] compiler_4.5.1         png_0.1-8              vctrs_0.6.5           
-##  [13] reshape2_1.4.4         stringr_1.5.2          crayon_1.5.3          
-##  [16] pkgconfig_2.0.3        fastmap_1.2.0          promises_1.3.3        
-##  [19] rmarkdown_2.30         purrr_1.1.0            xfun_0.53             
-##  [22] cachem_1.1.0           jsonlite_2.0.0         goftest_1.2-3         
-##  [25] later_1.4.4            spatstat.utils_3.2-0   irlba_2.3.5.1         
-##  [28] parallel_4.5.1         cluster_2.1.8.1        R6_2.6.1              
-##  [31] ica_1.0-3              spatstat.data_3.1-8    stringi_1.8.7         
-##  [34] bslib_0.9.0            RColorBrewer_1.1-3     reticulate_1.43.0     
-##  [37] spatstat.univar_3.1-4  parallelly_1.45.1      lmtest_0.9-40         
-##  [40] jquerylib_0.1.4        scattermore_1.2        Rcpp_1.1.0            
-##  [43] knitr_1.50             tensor_1.5.1           future.apply_1.20.0   
-##  [46] zoo_1.8-14             sctransform_0.4.2      httpuv_1.6.16         
-##  [49] Matrix_1.7-4           splines_4.5.1          igraph_2.2.0          
-##  [52] tidyselect_1.2.1       abind_1.4-8            rstudioapi_0.17.1     
-##  [55] yaml_2.3.10            spatstat.random_3.4-2  spatstat.explore_3.5-3
-##  [58] codetools_0.2-20       miniUI_0.1.2           listenv_0.9.1         
-##  [61] lattice_0.22-5         tibble_3.3.0           plyr_1.8.9            
-##  [64] shiny_1.11.1           withr_3.0.2            S7_0.2.0              
-##  [67] ROCR_1.0-11            evaluate_1.0.5         Rtsne_0.17            
-##  [70] future_1.67.0          fastDummies_1.7.5      survival_3.8-3        
-##  [73] polyclip_1.10-7        fitdistrplus_1.2-4     pillar_1.11.1         
-##  [76] KernSmooth_2.23-26     plotly_4.11.0          generics_0.1.4        
-##  [79] RcppHNSW_0.6.0         scales_1.4.0           globals_0.18.0        
-##  [82] xtable_1.8-4           glue_1.8.0             lazyeval_0.2.2        
-##  [85] tools_4.5.1            data.table_1.17.8      RSpectra_0.16-2       
-##  [88] RANN_2.6.2             dotCall64_1.2          cowplot_1.2.0         
-##  [91] grid_4.5.1             tidyr_1.3.1            nlme_3.1-168          
-##  [94] cli_3.6.5              rappdirs_0.3.3         spatstat.sparse_3.1-0 
-##  [97] spam_2.11-1            viridisLite_0.4.2      dplyr_1.1.4           
-## [100] uwot_0.2.3             gtable_0.3.6           sass_0.4.10           
-## [103] digest_0.6.37          progressr_0.17.0       ggrepel_0.9.6         
-## [106] htmlwidgets_1.6.4      farver_2.1.2           htmltools_0.5.8.1     
-## [109] lifecycle_1.0.4        httr_1.4.7             mime_0.13             
-## [112] MASS_7.3-65</code></pre>
+##   [1] RColorBrewer_1.1-3     rstudioapi_0.17.1      jsonlite_2.0.0        
+##   [4] shape_1.4.6.1          magrittr_2.0.4         spatstat.utils_3.2-0  
+##   [7] ggbeeswarm_0.7.2       farver_2.1.2           rmarkdown_2.30        
+##  [10] GlobalOptions_0.1.2    fs_1.6.6               vctrs_0.6.5           
+##  [13] ROCR_1.0-11            spatstat.explore_3.5-3 htmltools_0.5.8.1     
+##  [16] sass_0.4.10            sctransform_0.4.2      parallelly_1.45.1     
+##  [19] KernSmooth_2.23-26     bslib_0.9.0            htmlwidgets_1.6.4     
+##  [22] ica_1.0-3              plyr_1.8.9             plotly_4.11.0         
+##  [25] zoo_1.8-14             cachem_1.1.0           mime_0.13             
+##  [28] lifecycle_1.0.4        pkgconfig_2.0.3        Matrix_1.7-4          
+##  [31] R6_2.6.1               fastmap_1.2.0          fitdistrplus_1.2-4    
+##  [34] future_1.67.0          shiny_1.11.1           digest_0.6.37         
+##  [37] colorspace_2.1-1       tensor_1.5.1           RSpectra_0.16-2       
+##  [40] irlba_2.3.5.1          progressr_0.17.0       spatstat.sparse_3.1-0 
+##  [43] httr_1.4.7             polyclip_1.10-7        abind_1.4-8           
+##  [46] compiler_4.5.2         withr_3.0.2            S7_0.2.0              
+##  [49] fastDummies_1.7.5      MASS_7.3-65            rappdirs_0.3.3        
+##  [52] tools_4.5.2            vipor_0.4.7            lmtest_0.9-40         
+##  [55] beeswarm_0.4.0         httpuv_1.6.16          future.apply_1.20.0   
+##  [58] goftest_1.2-3          glue_1.8.0             nlme_3.1-168          
+##  [61] promises_1.3.3         grid_4.5.2             Rtsne_0.17            
+##  [64] cluster_2.1.8.2        reshape2_1.4.4         generics_0.1.4        
+##  [67] gtable_0.3.6           spatstat.data_3.1-8    tidyr_1.3.1           
+##  [70] data.table_1.17.8      spatstat.geom_3.6-0    RcppAnnoy_0.0.22      
+##  [73] ggrepel_0.9.6          RANN_2.6.2             pillar_1.11.1         
+##  [76] stringr_1.5.2          spam_2.11-1            RcppHNSW_0.6.0        
+##  [79] later_1.4.4            circlize_0.4.16        splines_4.5.2         
+##  [82] dplyr_1.1.4            lattice_0.22-9         survival_3.8-6        
+##  [85] deldir_2.0-4           tidyselect_1.2.1       miniUI_0.1.2          
+##  [88] pbapply_1.7-4          knitr_1.50             gridExtra_2.3         
+##  [91] scattermore_1.2        xfun_0.54              matrixStats_1.5.0     
+##  [94] stringi_1.8.7          lazyeval_0.2.2         yaml_2.3.10           
+##  [97] evaluate_1.0.5         codetools_0.2-20       tibble_3.3.0          
+## [100] cli_3.6.5              uwot_0.2.3             xtable_1.8-4          
+## [103] reticulate_1.44.1      jquerylib_0.1.4        dichromat_2.0-0.1     
+## [106] Rcpp_1.1.0             globals_0.18.0         spatstat.random_3.4-2 
+## [109] png_0.1-8              ggrastr_1.0.2          spatstat.univar_3.1-4 
+## [112] parallel_4.5.2         dotCall64_1.2          listenv_0.9.1         
+## [115] viridisLite_0.4.2      scales_1.4.0           ggridges_0.5.7        
+## [118] crayon_1.5.3           purrr_1.1.0            rlang_1.1.6           
+## [121] cowplot_1.2.0</code></pre>
 </div>
 <div id="references" class="section level1 unnumbered">
 <h1 class="unnumbered">References</h1>
